# UMI-windows

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  collect_dlls.ps1  config.json  requirements.txt  setup_orbbec_sdk.ps1  电动夹爪实际测试参数.txt
docs/: code-structure.md  deployment.md
frontend/: dashboard.css  dashboard.js  index.html  index_old.html  info.html  script.js  style.css
include/: Config.hpp  DeviceManager.hpp  ECanVciWrapper.hpp  ElectricGripper.hpp  HikCamera.hpp  HikCameraAdapter.hpp  HttpServer.hpp  ICamera.hpp  IGripper.hpp  OrbbecCamera.hpp  SlamManager.hpp  UmiGripper.hpp
include/utils/: JsonHelper.hpp  WinFsUtils.hpp
lib/hikvision/include/: CameraParams.h  MvCameraControl.h  PixelType.h
lib/hikvision/lib/: libMvCameraControlWrapper.so.4.7.0.1  libMvUsb3vTL.so.4.7.0.3  libusb-1.0.so.0
lib/hikvision/lib/win64/: MvCameraControl.lib
lib/orbbec/include/libobsensor/h/: ObTypes.h  Property.h
lib/orbbec/include/libobsensor/hpp/: Filter.hpp
lib/orbbec/lib/win64/: OrbbecSDK.lib
lib/umi/: CMakeLists.txt  umi_driver.h  umi_driver_v1.cc  umi_driver_v1.h  umi_driver_v2.cc  umi_driver_v2.h
lib/umi/tests/: test_umi_driver_v1.cc  test_umi_driver_v2.cc
src/: Config.cpp  DeviceManager.cpp  ElectricGripper.cpp  HikCamera.cpp  OrbbecCamera.cpp  SlamManager.cpp  UmiGripper.cpp  main.cpp
src/http/: HttpServer.cpp  HttpServerRecording.cpp  HttpServerRoutes.cpp
src/utils/: JsonHelper.cpp
tools/: convert_to_hdf5.py  convert_to_lerobot.py  convert_to_rlds.py
